mobile responsiveness fixes on various apps

--- a/camper-news/campernews.html
+++ b/camper-news/campernews.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta description content="FreeCodeCamp Popular News">
+  <meta name="viewport", content="width=device-width, initial-scale=1">
+
   <!--[if lt IE 9]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
   <!--Imports -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
