--- a/pomodoro-clock/main-pomodor.html
+++ b/pomodoro-clock/main-pomodor.html
@@ -2,9 +2,11 @@
 <head>
   <meta charset="utf-8">
   <meta description content="A pomodoro timer for timing your coding sessions.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!--[if lt IE 9]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
   <!-- Plugin Imports -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
