--- a/javascript-calculator/calculator.html
+++ b/javascript-calculator/calculator.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta description content="Simple Calculator.">
+  <meta name="viewport", content="width=device-width, initial-scale=1">
+
   <!--[if lt IE 9]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
   <!--Imports -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
@@ -28,7 +30,7 @@
     <div id="pad" class="container">
       <div class="row container">
         <button ng-click="clear()">C</button>
-        <button ng-click="changeSign()"><sup>+</sup>/<sub>−</sub></button>
+        <button id="change-sign" ng-click="changeSign()"><sup>+</sup>/<sub>−</sub></button>
         <button ng-click="modulate()">%</button>
         <button ng-click="divide()">÷</button>
       </div>
