--- a/wiki-viewer/wikiviewer.html
+++ b/wiki-viewer/wikiviewer.html
@@ -2,9 +2,19 @@
 <head>
   <meta charset="utf-8">
   <meta description content="Wikipedia Article Viewer">
+
   <!--[if lt IE 9]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-            <![endif]-->
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato"/>
+
+  <script src="app.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 
   <title>Wikipedia Viewer | Search and View Your Favorite Articles.</title>
   <noscript>This application requires JavaScript to function. Please enable scripts in your browser.</noscript>
