mobile changes to a few apps

--- a/wiki-viewer/wikiviewer.html
+++ b/wiki-viewer/wikiviewer.html
@@ -1,7 +1,8 @@
-<html ng-app="viewer">
+  <html ng-app="viewer">
 <head>
   <meta charset="utf-8">
   <meta description content="Wikipedia Article Viewer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
