added comments to dungeon-crawler

--- a/pomodoro-clock/main-pomodor.html
+++ b/pomodoro-clock/main-pomodor.html
@@ -36,7 +36,7 @@
         <button class="minus">-</button><span class="num-time"></span><button class="plus">+</button>
     </div>
   </div>
-  <div id="stopwatch-area">
+  <div id="stopwatch-area" class="container">
     <div id="stopwatch">
       <p id="stopwatch-title"></p>
       <p id="stopwatch-time"></p>
